--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,8 +2,41 @@
 
 <html>
 <head>
-    <title>Give My Money Back</title>
+    <title>Give Me My Money Back</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet/navbar.css">
 </head>
+
+<nav class="barra-logo">
+                <div class="navbar">
+                    <div class="nav_button">        
+                            <div class="logo">
+                                <a href="./index.html"><img src="../public/img/jeklogo.png" width="220vh" height="120vh" /></a>
+
+                            </div>
+                            <div class="logo_3">
+                                <p class="logo2"><em>Give me my money back!</em></p>
+                            </div>
+                    </div>  
+                </div>
+</nav>
+
+
+
+    <script>
+        $("#sobre_nos_button").click(function () {
+
+        $([document.documentElement, document.body]).animate(
+        {
+        scrollTop: $(".sobre_nos_conteudo").offset().top,
+        },
+        1400
+        );
+        });
+    </script>
+</html>
+
+
+</nav>
 <body>
     <%- body %>
 </body>
