--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,6 @@
 <h1>Login</h1>
+
+
 <form action="/users/login" method="POST">
   <div>
     <label for="email">E-mail</label>
@@ -9,7 +11,7 @@
     <input type="password" name="password" placeholder="Enter Password" />
   </div>
 
-  <button type="submit" class="btn btn-primary btn-block">Registar</button>
+  <button type="submit" class="btn btn-primary btn-block">Login</button>
 </form>
 
-<p>Não tens conta? <a href="register">Register</a></p>
+<p>Não tens conta? <a href="signup">Signup</a></p>
