--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,6 +1,6 @@
 <html>
   <h1>Bem-Vindo!!</h1>
   <p>Criar uma Conta</p>
-  <a href="/users/register">Registar</a>
+  <a href="/users/signup">Registar</a>
   <a href="/users/login">Login</a>
 </html>
