--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,7 @@
-<h1>Register</h1>
-<form action="/users/register" method="POST">
+<h1>SignUp</h1>
+
+
+<form action="/users/signup" method="POST">
   <div>
     <label for="name">Name</label>
     <input
@@ -44,6 +46,20 @@
       placeholder="Confirm Password"
       value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
     />
+  </div>
+  <div>
+    <label for="department">Departamento</label>
+   <!-- <input
+      type="department"
+      name="department"
+      placeholder="Departamento"
+      value="<%= typeof department != 'undefined' ? department : '' %>"
+    />-->
+    <select  type="department" name="department" placeholder="Departamento" value="<%= typeof department != 'undefined' ? department : '' %>">
+            <option name="Intern" value="Intern">Intern</option>
+            <option name="Innovation" value="Innovation">Innovation</option>
+            <option name="Tech" value="Tech">Tech</option>
+    </select>
   </div>
 
   <button type="submit" class="btn btn-primary btn-block">Registar</button>
