--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <h1>Bem vindos</h1>
 
-<div class="encomendas">
-    <div class="titulo_encomendas">
+<div class="dividas_buttons">
+    <div class="titulo_dividas_jek">
         <h1>Dividas jeKnowledge</h1>
 </div>
     <ul>
@@ -10,6 +10,9 @@
       <form form action="/dividas/getall" method="GET">
         <dt>
        <li><button class="button_pag" onclick="myFunction('painel-0')">Dividas Totais</button></li>
+          <div class="lista_dividas_totais">
+            
+          </div>
         </dt>
         <dd id="painel-0" class="transicao"> 
         </dd>
@@ -23,6 +26,11 @@
                   <from form action="/dividas/intern" method="GET">
                       <dt>
                           <li><button class="button_pag" onclick="myFunction('painel-1')">Dividas Interno</button></li>
+
+                          <div class="lista_dividas_intern">
+            
+                          </div>
+
                       </dt>
                           <dd id="painel-1.1" class="transicao"></dd>
                   </from>
@@ -30,6 +38,11 @@
                   <from form action="/dividas/innovation" method="GET">
                       <dt>
                           <li><button class="button_pag" onclick="myFunction('painel-1')">Dividas Inovação</button></li>
+
+                          <div class="lista_dividas_innovation">
+            
+                          </div>
+
                       </dt>
                           <dd id="painel-1.2" class="transicao"></dd>
                   </from> 
@@ -37,6 +50,11 @@
                   <from form action="/dividas/tech" method="GET">
                       <dt>
                           <li><button class="button_pag" onclick="myFunction('painel-1')">Dividas Tech</button></li>
+
+                          <div class="lista_dividas_tech">
+                              
+                          </div>
+
                       </dt>
                           <dd id="painel-1.3" class="transicao"></dd>
                   </from> 
