--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,10 +9,10 @@
 <nav class="barra-logo">
                 <div class="navbar">
                     <div class="nav_button">        
-                            <div class="logo">
+                            <!-- <div class="logo">
                                 <a href="./index.html"><img src="../public/img/jeklogo.png" width="220vh" height="120vh" /></a>
 
-                            </div>
+                            </div> -->
                             <div class="logo_3">
                                 <p class="logo2"><em>Give me my money back!</em></p>
                             </div>
