--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -65,4 +65,4 @@
   <button type="submit" class="btn btn-primary btn-block">Registar</button>
 </form>
 
-<p>Tens conta? <a href="login">Login</a></p>
+<p>Tens conta? <a href="/">Login</a></p>
