--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,12 @@
-
 <h1> Bem-Vindo jeKer</h2>
 
+
 <form action="/users/login" method="POST">
-  <div>
+  <div class = "email">
     <label for="email">E-mail</label>
     <input type="email" name="email" placeholder="Enter E-mail" />
   </div>
-  <div>
+  <div class="email">
     <label for="password">Password</label>
     <input type="password" name="password" placeholder="Enter Password" />
   </div>
@@ -14,4 +14,4 @@
   <button type="submit" class="btn btn-primary btn-block">Login</button>
 </form>
 
-<p>Não tens conta? <a href="signup">Signup</a></p>
+<p>Não tens conta? <a href="users/signup">Signup</a></p>
