--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,80 +3,86 @@
 <div class="dividas_buttons">
     <div class="titulo_dividas_jek">
         <h1>Dividas jeKnowledge</h1>
-</div>
+    </div>
     <ul>
     <div class="dividas">
+
+      <div class = "criar/eliminar_dividas">
+
+      <p>Alguem te deve dinheiro ? Pede-o <a href="dividas">aqui</a></p>
+      <p>Já te devolveram o dinheiro?<a href="eliminadivida">Apaga a tua divida</a></p>
+
+    </div>
+
 
       <form form action="/dividas/getall" method="GET">
         <dt>
        <li><button class="button_pag" onclick="myFunction('painel-0')">Dividas Totais</button></li>
-          <div class="lista_dividas_totais">
+            <div id="users" class="users" >
             
-          </div>
+            </div>
         </dt>
         <dd id="painel-0" class="transicao"> 
         </dd>
       </form>
 
-
-      <from form action="/dividas/" method="GET">
+      <form form action="/dividas/Intern" method="GET">
         <dt>
-            <li><button class="button_pag" onclick="myFunction('painel-1')">Dividas Por Departamento</button></li>
-
-                  <from form action="/dividas/intern" method="GET">
-                      <dt>
-                          <li><button class="button_pag" onclick="myFunction('painel-1')">Dividas Interno</button></li>
-
-                          <div class="lista_dividas_intern">
+       <li><button class="button_pag" onclick="myFunction('painel-0')">Dividas Intern</button></li>
+            <div id="users" class="users" >
             
-                          </div>
-
-                      </dt>
-                          <dd id="painel-1.1" class="transicao"></dd>
-                  </from>
-
-                  <from form action="/dividas/innovation" method="GET">
-                      <dt>
-                          <li><button class="button_pag" onclick="myFunction('painel-1')">Dividas Inovação</button></li>
-
-                          <div class="lista_dividas_innovation">
-            
-                          </div>
-
-                      </dt>
-                          <dd id="painel-1.2" class="transicao"></dd>
-                  </from> 
-
-                  <from form action="/dividas/tech" method="GET">
-                      <dt>
-                          <li><button class="button_pag" onclick="myFunction('painel-1')">Dividas Tech</button></li>
-
-                          <div class="lista_dividas_tech">
-                              
-                          </div>
-
-                      </dt>
-                          <dd id="painel-1.3" class="transicao"></dd>
-                  </from> 
+            </div>
         </dt>
-            <dd id="painel-1" class="transicao"></dd>
-      </from>      
+        <dd id="painel-1" class="transicao"> 
+        </dd>
+      </form>
 
-
-      <from>
-            <dt>
-                <li><button class="button_pag" onclick="myFunction('painel-2')">As Tuas Dividas</button></li>
-            </dt>
-            <dd id="painel-2" class="transicao"></dd>
-      </from>      
+      <form form action="/dividas/Innovation" method="GET">
+        <dt>
+       <li><button class="button_pag" onclick="myFunction('painel-0')">Dividas Innovation</button></li>
+            <div id="users" class="users" >
             
-    </div>
+            </div>
+        </dt>
+        <dd id="painel-2" class="transicao"> 
+        </dd>
+      </form>
+
+
+      <form form action="/dividas/Tech" method="GET">
+        <dt>
+       <li><button class="button_pag" onclick="myFunction('painel-0')">Dividas Tech</button></li>
+            <div id="users" class="users" >
+            
+            </div>
+        </dt>
+        <dd id="painel-3" class="transicao"> 
+        </dd>
+      </form>
+
+
+
+      <form form action="/dividas/users" method="GET">
+        <dt>
+       <li><button class="button_pag" onclick="myFunction('painel-0')">Minhas Dividas</button></li>
+            <div id="users" class="users" >
+            
+            </div>
+        </dt>
+        <dd id="painel-1" class="transicao"> 
+        </dd>
+      </form>  
+            
+
   </ul>
 </div>
+
 
 <a href="/users/logout">Logout</a>
 
 
+
+<!-- 
   <script>
         function myFunction(id) {
           var x = document.getElementById(id);
@@ -88,4 +94,4 @@
             x.style.display = "none";
           }
         }a
-    </script>
+    </script> -->
