second commit, (praticamente igual ao anterior)

--- a/views/deletedivida.ejs
+++ b/views/deletedivida.ejs
@@ -1,6 +1,6 @@
 <h2>Elimina Divida jeK</h2>
 
-<form action="dividas/eliminadivida" method="POST">
+<form action="dividas/deletedivida" method="POST">
         <div>
             <label for="dividaID">Id Divida</label>
             <input type="dividaID" name="dividaID" placeholder="dividaID" />
