--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,7 @@
       <div class = "criar/eliminar_dividas">
 
       <p>Alguem te deve dinheiro ? Pede-o <a href="dividas">aqui</a></p>
-      <p>Já te devolveram o dinheiro?<a href="eliminadivida">Apaga a tua divida</a></p>
+      <p>Já te devolveram o dinheiro?<a href="dividas/deletedivida">Apaga a tua divida</a></p>
 
     </div>
 
