third commit, (praticamente igual ao anterior)

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,4 +14,4 @@
   <button type="submit" class="btn btn-primary btn-block">Login</button>
 </form>
 
-<p>Não tens conta? <a href="users/signup">Signup</a></p>
+<p>Não tens conta? <a href="/signup">Signup</a></p>
