frontend feito (antes da mudanca para html)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,8 +9,8 @@
 
       <div class = "criar/eliminar_dividas">
 
-      <p>Alguem te deve dinheiro ? Pede-o <a href="dividas">aqui</a></p>
-      <p>Já te devolveram o dinheiro?<a href="dividas/deletedivida">Apaga a tua divida</a></p>
+      <p>Alguem te deve dinheiro ? Pede-o <a href="/dividas/create">aqui</a></p>
+      <p>Já te devolveram o dinheiro?<a href="/dividas/deletedivida">Apaga a tua divida</a></p>
 
     </div>
 
@@ -62,7 +62,7 @@
 
 
 
-      <form form action="/dividas/users" method="GET">
+      <form form action="dividas/users" method="GET">
         <dt>
        <li><button class="button_pag" onclick="myFunction('painel-0')">Minhas Dividas</button></li>
             <div id="users" class="users" >
@@ -78,7 +78,7 @@
 </div>
 
 
-<a href="/users/logout">Logout</a>
+<a href="logout">Logout</a>
 
 
 
