--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,6 @@
 <h1>SignUp</h1>
-<%- include ('./partials/messages') %>
 
-<form action="/users/signup" method="POST">
+<form action="signup" method="POST">
   <div>
     <label for="name">Name</label>
     <input
@@ -59,4 +58,4 @@
   <button type="submit" class="btn btn-primary btn-block">Registar</button>
 </form>
 
-<p>Tens conta? <a href="/">Login</a></p>
+<p>Tens conta? <a href="./login.html">Login</a></p>
