--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,5 +1,5 @@
-<% if(typeof errors!= 'undefined') { %>
-<%    errors.forEach(function(error){ %>
-<p> <%= error.msg %></p>
-<%    })        %>
-<% } %>
+<% if (typeof errors) {%> 
+    <% errors.forEach (function (error) {%> 
+        <p> <%error.msg%> </p> 
+    <%})%> 
+< %}%>
