--- a/views/dividastotais.ejs
+++ b/views/dividastotais.ejs
@@ -1,9 +1,26 @@
 <h2>Dividas Jeknowledge</h2>
 
-<%- JSON.stringify(dividas) %>
 
+<div class="result">
+<ul>
+<% for( divida of dividas) {%>
+  <% if(divida.id !== null) { %>
+    <% if(divida.credor !== null) { %>
+      <% if(divida.devedor !== null) { %>
+        <% if(divida.quantia !== null) { %>
+          <% if(divida.descricao !== null) { %>
+            <% if(divida.date !== null) { %>
+                  <li class="string">
+                    <strong>Id:</strong> <%= divida.id%>,<strong>Credor: </strong> <%= divida.credor%>,<strong>Devedor: </strong><%= divida.devedor%>,
+                        <strong>Quantia:</strong><%= divida.quantia%>,<strong>Descricao: </strong><%= divida.descricao%>,<strong>Data:</strong><%= divida.date%>
+                  </li>
+              <% } %>
+            <% } %>
+          <% } %>
+        <% } %>
+      <% } %>
+  <% } %>
+<% } %>
 
-<% []dividas.shows.forEach(function(dividas) { %>
-  <li><%= dividas.credor %></li>
-<% }) %>
-
+</ul>
+</div>
