frontend /backend melhorado, eliminacao de status.json

--- a/views/dividasInnovation.ejs
+++ b/views/dividasInnovation.ejs
@@ -14,7 +14,7 @@
                 <% if(divida.date !== null) { %>
                       <li class="string">
                         <strong>Id:</strong> <%= divida.id%>,<strong>Credor: </strong> <%= divida.credor%>,<strong>Devedor: </strong><%= divida.devedor%>,
-                        <strong>Quantia:</strong><%= divida.quantia%>,<strong>Descricao: </strong><%= divida.descricao%>,<strong>Data:</strong><%= divida.date%>
+                        <strong>Quantia:</strong><%= divida.quantia%> € ,<strong>Descricao: </strong><%= divida.descricao%>,<strong>Data:</strong><%= divida.date%>
                       </li>
                   <% } %>
                 <% } %>
