--- a/views/dividasUser.ejs
+++ b/views/dividasUser.ejs
@@ -1,3 +1,44 @@
 <h2>As Minhas Dividas</h2>
 
+<div class="result">
+<ol>
+<% for( divida of dividas) {%>
+  <% if(divida.id !== null) { %>
+    <% if(divida.credor !== null) { %>
+      <% if(divida.devedor !== null) { %>
+        <% if(divida.quantia !== null) { %>
+          <% if(divida.descricao !== null) { %>
+            <% if(divida.date !== null) { %>
+                  <li class="string">
+                    <strong>Id:</strong> <%= divida.id%>,<strong>Credor: </strong> <%= divida.credor%>,<strong>Devedor: </strong><%= divida.devedor%>,
+                        <strong>Quantia:</strong><%= divida.quantia%> €,<strong>Descricao: </strong><%= divida.descricao%>,<strong>Data:</strong><%= divida.date%>,<strong>Eliminar ?</strong>
+                        
+                        <div class="delete">
+                          <form form action="/dividas/deletedivida" method="DELETE">
+                              <dt>
+                                <section class="deleteq">
+                                  <label for="yes">S/</label>
+                                  <input id="yes" name="yes" type="checkbox" value="yes" required>
+                                </section>
+                              </dt>
+                              <dd id="painel-1" class="transicao"> 
+                              </dd>
+                            </form>
+                          </div>
+
+
+                  </li>
+              <% } %>
+            <% } %>
+          <% } %>
+        <% } %>
+      <% } %>
+  <% } %>
+<% } %>
+    <% else { %>
+        <p>Não tens dividas!!</p>
+    <%}%>
+</ol>
+</div>
+
 
