--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Give Me My Money Back</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet/navbar.css">
+    <!--<link rel="stylesheet" type="text/css" href="stylesheet/navbar.css">-->
 </head>
 
 <nav class="barra-logo">
