--- a/views/dividasUser.ejs
+++ b/views/dividasUser.ejs
@@ -11,7 +11,7 @@
             <% if(divida.date !== null) { %>
                   <li class="string">
                     <strong>Id:</strong> <%= divida.id%>,<strong>Credor: </strong> <%= divida.credor%>,<strong>Devedor: </strong><%= divida.devedor%>,
-                        <strong>Quantia:</strong><%= divida.quantia%> €,<strong>Descricao: </strong><%= divida.descricao%>,<strong>Data:</strong><%= divida.date%>,<strong>Eliminar ?</strong>
+                        <strong>Quantia:</strong><%= divida.quantia%> €,<strong>Descricao: </strong><%= divida.descricao%>,<strong>Data:</strong><%= divida.date%>
                         
                         <div class="delete">
                           <form form action="/dividas/deletedivida" method="DELETE">
