--- a/views/dividastotais.ejs
+++ b/views/dividastotais.ejs
@@ -12,8 +12,18 @@
             <% if(divida.date !== null) { %>
                   <li class="string">
                     <strong>Id:</strong> <%= divida.id%>,<strong>Credor: </strong> <%= divida.credor%>,<strong>Devedor: </strong><%= divida.devedor%>,
-                        <strong>Quantia:</strong><%= divida.quantia%> €,<strong>Descricao: </strong><%= divida.descricao%>,<strong>Data:</strong><%= divida.date%>
+                        <strong>Quantia:</strong><%= divida.quantia%> €,<strong>Descricao: </strong><%= divida.descricao%>
                   </li>
+
+                  <div class="delete">
+                    <form action="dividas/<%= divida.id%>" method="POST">
+                        <dt>
+                            <button id="delete" name="delete" value="delete" required class="button_pag" onclick="myFunction('painel-1')">Eliminar</button>
+                        </dt>
+                        <dd id="painel-1" class="transicao"> 
+                        </dd>
+                      </form>
+                  </div>
               <% } %>
             <% } %>
           <% } %>
