--- a/views/dividastotaisadmin.ejs
+++ b/views/dividastotaisadmin.ejs
@@ -11,16 +11,16 @@
             <% if(divida.date !== null) { %>
                   <li class="string">
                     <strong>Id:</strong> <%= divida.id%>,<strong>Credor: </strong> <%= divida.credor%>,<strong>Devedor: </strong><%= divida.devedor%>,
-                        <strong>Quantia:</strong><%= divida.quantia%> €,<strong>Descricao: </strong><%= divida.descricao%>,<strong>Data:</strong><%= divida.date%>
+                        <strong>Quantia:</strong><%= divida.quantia%> €,<strong>Descricao: </strong><%= divida.descricao%>
                         
                         <div class="delete">
-                          <form form action="/dividas/<%= divida.id%>" method="PATCH">
-                              <dt>
-                                  <button id="delete" name="delete" value="delete" required class="button_pag" onclick="myFunction('painel-1')">Eliminar</button>
-                              </dt>
-                              <dd id="painel-1" class="transicao"> 
-                              </dd>
-                            </form>
+                          <form form action="<%= divida.id%>" method="POST">
+                            <dt>
+                           <button class="button_pag" onclick="myFunction('painel-4')">Eliminar</button>
+                            </dt>
+                            <dd id="painel-4" class="transicao"> 
+                            </dd>
+                          </form>
                         </div>
 
 
@@ -35,4 +35,17 @@
 </ol>
 </div>
 
+<div class = "criar/eliminar_dividas">
 
+  <h4>Alguem te deve dinheiro ? Pede-o <a href="/dividas/create">aqui</a></h4>
+
+</div>
+
+<script>
+  function myFunction(){
+    $("#delete").click(function () {
+    $.delete('/dividas/dividaID')
+  });
+  }
+  
+</script>
