--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Give Me My Money Back</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--<link rel="stylesheet" type="text/css" href="stylesheet/navbar.css">-->
 </head>
 
