--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Give Me My Money Back</title>
+    <title>jeKash</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--<link rel="stylesheet" type="text/css" href="stylesheet/navbar.css">-->
 </head>
@@ -15,7 +15,7 @@
 
                             </div> -->
                             <div class="logo_3">
-                                <p class="logo2"><em>Give me my money back!</em></p>
+                                <h1><em>jeKash</em></h1>
                             </div>
                     </div>  
                 </div>
