Correcao de alguns erros (Logout,display de dividas pagas)

--- a/views/dividasUsers.ejs
+++ b/views/dividasUsers.ejs
@@ -9,7 +9,7 @@
         <% if(divida.quantia !== null) { %>
           <% if(divida.descricao !== null) { %>
             <% if(divida.date !== null) { %>
-                <% if(divida.paga === "true"){%>
+                <% if(!divida.paga){%>
                     <li class="string">
                     <strong>Id:</strong> <%= divida.id%>,<strong>Credor: </strong> <%= divida.credor%>,<strong>Devedor: </strong><%= divida.devedor%>,
                         <strong>Quantia:</strong><%= divida.quantia%> €,<strong>Descricao: </strong><%= divida.descricao%>
@@ -25,7 +25,7 @@
                         </div>
                   </li>
                 
-                <% } %>
+               <% } %>
               <% } %>
             <% } %>
           <% } %>
