--- a/views/dividasIntern.ejs
+++ b/views/dividasIntern.ejs
@@ -12,10 +12,12 @@
             <% if(divida.quantia !== null) { %>
               <% if(divida.descricao !== null) { %>
                 <% if(divida.date !== null) { %>
+                  <% if(!divida.paga){%>
                       <li class="string">
                         <strong>Id:</strong> <%= divida.id%>,<strong>Credor: </strong> <%= divida.credor%>,<strong>Devedor: </strong><%= divida.devedor%>,
                         <strong>Quantia:</strong><%= divida.quantia%> €,<strong>Descricao: </strong><%= divida.descricao%>
                     </li>
+                    <% } %>
                   <% } %>
                 <% } %>
               <% } %>
