--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,10 +62,15 @@
   </ul>
 </div>
 
-
-<a href="users/logout">Logout</a>
-
-
+<div>
+  <form form action="users/logout" method="GET">
+    <dt>
+  <li><button class="button_pag" onclick="myFunction('painel-5')">Logout</button></li>
+    </dt>
+    <dd id="painel-5" class="transicao"> 
+    </dd>
+  </form>
+</div>
 
 <!-- 
   <script>
