--- a/client/src/style/css/Selects.css
+++ b/client/src/style/css/Selects.css
@@ -3,7 +3,7 @@
     src: url(../font/SuisseIntlCond-Semibold-WebS.ttf);
 }
 
-.labelInput label{
+.SelectDepartments label{
     font-family: "fonteLabel";
     font-weight: 550;
     font-size: 14px;
@@ -15,16 +15,13 @@
     
 }
 
-
-
-.labelInput input{
-    width: 30vh;
+.SelectDepartments select{
+    width: 70vw;
     height: 4vh;
     margin-left: 12.5%;
     padding-left: 2.5vh;
     font-size: 12px;
     display: flex;
-    justify-content: space-around;
     letter-spacing: 0.01em;
     background: #FFFFFF;
 
@@ -33,15 +30,15 @@
     border: #ffffff;
     
     color: #AEADAA;
-
 }
 
-.labelInput .nameinput{
-    width: 12vh;
+
+.SelectDepartments select option{
+    width: 30vh;
     height: 4vh;
-    margin-left: 5vh;
-    padding-left: 2.5vh;
     font-size: 12px;
+    line-height: 16px;
+    align-items: center;
     display: flex;
     letter-spacing: 0.01em;
     background: #FFFFFF;
@@ -49,33 +46,6 @@
     box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
     border-radius: 30px;
     border: #ffffff;
-    
-    color: #AEADAA;
+
+    color: #3E3C39;
 }
-
-
-.labelInput .lastnameinput{
-    width: 12vh;
-    height: 4vh;
-    padding-left: 2.5vh;
-    font-size: 12px;
-    display: flex;
-    letter-spacing: 0.01em;
-    background: #FFFFFF;
-
-    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
-    border-radius: 30px;
-    border: #ffffff;
-    
-    color: #AEADAA;
-}
-
-.labelInput .name{
-    margin-left: 8vh;
-}
-
-.labelInput .lastname{
-    margin-left: 4vh;
-}
-
-
