--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -49,7 +49,7 @@
     font-family: "Suisse Int'l Condensed L";
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 5.5vw;
     line-height: 26px;
     display: flex;
     align-items: center;
@@ -91,8 +91,9 @@
 }
 
 #mydividasSTR {
+    /* Criar de divida */
     position: relative;
-    width: 40%;
+    width: 50%;
     height: 50%;
     top: -28%;
     left: 20%;
@@ -100,7 +101,7 @@
     font-family: "Suisse Int'l Condensed L";
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 5.5vw;
     line-height: 26px;
     display: flex;
     align-items: center;
@@ -129,24 +130,6 @@
     box-sizing: border-box;
 }
 
-#oqdevoSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
-}
 
 #oqdevem {
     z-index: 1;
@@ -159,25 +142,6 @@
     background: #F08A6E;
     border-bottom: 1px solid #FFFFFF;
     box-sizing: border-box;
-}
-
-#oqdevemSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
 }
 
 .App-logo-pessoa {
@@ -244,7 +208,7 @@
     font-family: "Suisse Int'l Condensed L";
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 5.5vw;
     line-height: 26px;
     display: flex;
     align-items: center;
@@ -262,8 +226,7 @@
     transition: 0.6s ease;
 }
 
-
-#Interno {
+#subbot {
     position: relative;
     width: 100%;
     height: 100%;
@@ -275,7 +238,7 @@
     box-sizing: border-box;
 }
 
-#InternoSTR {
+#subbotSTR {
     position: relative;
     width: 40%;
     height: 50%;
@@ -285,69 +248,7 @@
     font-family: "Suisse Int'l Condensed L";
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
-}
-
-#Inovacao {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0%;
-
-    background: #F08A6E;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
-}
-
-#InovacaoSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
-}
-
-#Tech {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0%;
-
-    background: #F08A6E;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
-}
-
-#TechSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
+    font-size: 5vw;
     line-height: 26px;
     display: flex;
     align-items: center;
