--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -51,26 +51,6 @@
     box-sizing: border-box;
 }
 
-#criardividaSTR {
-    /* Criar dívida */
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: -30%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
-}
-
 .App-logo-plus {
     /* Criar Dívida Icone */
     position: relative;
@@ -104,7 +84,7 @@
     transition: 0.6s ease;
 }
 
-#mydividasSTR {
+#primbotSTR {
     position: relative;
     width: 40%;
     height: 50%;
@@ -114,7 +94,7 @@
     font-family: "Suisse Int'l Condensed L";
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 5.7vw;
     line-height: 26px;
     display: flex;
     align-items: center;
@@ -130,7 +110,8 @@
     transition: 0.6s ease;
 }
 
-#oqdevo {
+
+#primbot {
     z-index: 1;
     position: relative;
     width: 100%;
@@ -141,57 +122,6 @@
     background: #F08A6E;
     border-bottom: 1px solid #FFFFFF;
     box-sizing: border-box;
-}
-
-#oqdevoSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
-}
-
-#oqdevem {
-    z-index: 1;
-    position: relative;
-    width: 100%;
-    height: 50%;
-    left: 0px;
-    top: 0%;
-
-    background: #F08A6E;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
-}
-
-#oqdevemSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
 }
 
 .App-logo-pessoa {
@@ -243,25 +173,6 @@
     transition: 0.6s ease;
 }
 
-#dividastotaisSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: -28%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
-}
-
 /*anim*/
 #menu {
     position: absolute;
@@ -272,7 +183,7 @@
 }
 
 
-#Interno {
+#botao {
     position: relative;
     width: 100%;
     height: 100%;
@@ -284,7 +195,7 @@
     box-sizing: border-box;
 }
 
-#InternoSTR {
+#subbotSTR {
     position: relative;
     width: 40%;
     height: 50%;
@@ -294,69 +205,7 @@
     font-family: "Suisse Int'l Condensed L";
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
-}
-
-#Inovacao {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0%;
-
-    background: #F08A6E;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
-}
-
-#InovacaoSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 26px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.01em;
-
-    color: #FFFFFF;
-}
-
-#Tech {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    left: 0px;
-    top: 0%;
-
-    background: #F08A6E;
-    border-bottom: 1px solid #FFFFFF;
-    box-sizing: border-box;
-}
-
-#TechSTR {
-    position: relative;
-    width: 40%;
-    height: 50%;
-    top: 24%;
-    left: 20%;
-
-    font-family: "Suisse Int'l Condensed L";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
+    font-size: 5.2vw;
     line-height: 26px;
     display: flex;
     align-items: center;
