--- a/client/src/style/css/CriarDivida.css
+++ b/client/src/style/css/CriarDivida.css
@@ -74,7 +74,7 @@
     margin-top: 5vh;
 
     font-family: fonteLabel;
-    font-size: 14px;
+    font-size: 3.5vw;
     letter-spacing: 0.01em;
 
     background: #F08A6E;
@@ -83,7 +83,6 @@
     cursor: pointer;
     outline: none;
     color: #FFFFFF;
-
 }
 
 /* remove spin wheel input numbers */
