--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -44,7 +44,7 @@
     width: 100%;
     height: 8%;
     left: 0px;
-    top: 8%;
+    top: 0%;
     background-color: #FCC17A;
     border-top: 1px solid #FFFFFF;
     border-bottom: 1px solid #FFFFFF;
@@ -66,7 +66,7 @@
     width: 100%;
     height: 8%;
     left: 0px;
-    top: 8%;
+    top: 0%;
     transform-origin: top;
 }
 
@@ -167,7 +167,7 @@
     width: 100%;
     height: 100%;
     left: 0px;
-    top: 0%;
+    top: -100%;
     border-bottom: 1px solid #FFFFFF;
     box-sizing: border-box;
     transition: 0.6s ease;
@@ -188,11 +188,18 @@
     width: 100%;
     height: 100%;
     left: 0px;
-    top: 0%;
+    top: -100%;
 
     background: #F08A6E;
     border-bottom: 1px solid #FFFFFF;
     box-sizing: border-box;
+}
+
+.App-logo-UPBottom {
+    position: relative;
+    left: 88%;
+    top: -17%;
+    transition: 0.6s ease;
 }
 
 #subbotSTR {
@@ -212,6 +219,60 @@
     letter-spacing: 0.01em;
 
     color: #FFFFFF;
+}
+
+#bottomBar {
+    position: absolute;
+    width: 100%;
+    left: 0px;
+    top: 92%;
+    height: 8%;
+    transition: 0.6s ease;
+}
+
+#BottomPrimary {
+    z-index: 2;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0%;
+    background-color: #FCC17A;
+    border-top: 1px solid #FFFFFF;
+    box-sizing: border-box;
+}
+
+
+#bottomBarSTR {
+    position: relative;
+    width: 40%;
+    height: 50%;
+    top: 24%;
+    left: 20%;
+
+    font-family: "Suisse Int'l Condensed L";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 5.7vw;
+    line-height: 26px;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.01em;
+
+    color: #FFFFFF;
+}
+
+#BottomSec {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0%;
+
+    background: #F08A6E;
+    border-top: 1px solid #FFFFFF;
+    box-sizing: border-box;
+    transition: 0.6s;
 }
 
 /* para remover de todos os Links*/
