--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -1,38 +1,109 @@
 @font-face {
-    font-family: fonteTitulo;
-    src: url(../font/SuisseIntlCond-Medium-WebS.woff);
+  font-family: fonteTitulo;
+  src: url(../font/SuisseIntlCond-Medium-WebS.woff);
 }
 
 @font-face {
-    font-family: fonteLabel;
-    src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
+  font-family: fonteLabel;
+  src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
 }
+
 .dividasshow {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
+
 .Ppagar {
-    position: relative;
-    width: 70%;
-    height: 4vh;
-    left: 16.25%;
-    margin-top: 4vh;
+  position: relative;
+  width: 70%;
+  height: 4vh;
+  left: 16.25%;
+  margin-top: 2.5vh;
 
-    font-family: fonteLabel;
-    font-size: 3.5vw;
-    letter-spacing: 0.01em;
+  font-family: fonteLabel;
+  font-size: 3.5vw;
+  letter-spacing: 0.01em;
 
-    border-radius: 30px;
-    border: none;
-    cursor: pointer;
-    outline: none;
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+  outline: none;
 }
-#text {
-    color: #FFFFFF;
-    text-align: center;
-    left: 50%;
-    display: inline-block;
+#text1 {
+  font-family: fonteLabel;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 4vw;
+  line-height: 130%;
+  display: flex;
+  
+  
+  letter-spacing: 0.01em;
+
+  position: relative;
+  color: #ffffff;
+
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  transform: translate(0,30%);
 }
+
+#text2 {
+  position: relative;
+
+}
+
+#dividaspresent {
+  font-family: fonteLabel;
+  align-items: center;
+  width: 80%;
+  height: fit-content;
+  transform: translate(15%, 0%);
+  margin-top: 2vh;
+
+  display: block;
+  justify-content: center;
+  align-items: center;
+
+  font-family: fonteLabel;
+  font-size: 3.5vw;
+  letter-spacing: 0.01em;
+
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+
+  background: #FFFFFF;
+  /* sombra suave */
+
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+}
+#line {
+  display: block;
+  border-bottom: 1px solid currentColor;
+  transform: matrix(1, 0, 0, 1, 0, 0);
+  width: 80%;
+
+
+  margin: auto;
+  margin-top: 5%;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+
 #titlepresent {
-    
+  text-align: center;
+  margin: auto;
+  width: 80%;
+
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+
+  text-shadow: 4px 4px 25px rgba(0, 0, 0, 0.1);
+  transform: translate(0, 50%);
 }
+
