--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -7,10 +7,25 @@
   font-family: fonteLabel;
   src: url(../font/SuisseIntlCond-Semibold-WebS.woff);
 }
-
-.dividasshow {
+@font-face{
+  font-family: fontenormal;
+  src: url(../font/SuisseIntlCond-Regular-WebS.woff)
+}
+html{
   width: 100%;
   height: 100%;
+}
+.criar-divida-titulo {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+
+.dividasshow {
+  position: absolute;
+  width: 100%;
+  height: 200%;
+
 }
 
 .Ppagar {
@@ -33,8 +48,8 @@
   font-family: fonteLabel;
   font-style: normal;
   font-weight: 600;
-  font-size: 4vw;
-  line-height: 130%;
+  font-size: 5vw;
+  line-height: 110%;
   display: flex;
   
   
@@ -51,12 +66,13 @@
 
 #text2 {
   position: relative;
-  right: 2%;
+  right: 3%;
+  display: inline-block;
   font-family: fonteLabel;
   font-style: normal;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 18px;
+  font-weight: 900;
+  font-size: 5.5vw;
+  line-height: 100%;
   align-items: center;
   letter-spacing: 0.01em;
 }
@@ -64,18 +80,16 @@
 
 #dividaspresent {
   position: relative;
-  font-family: fonteLabel;
-  align-items: center;
-  width: 80vw;
-  height: 28vh;
-  transform: translate(0%, 0%);
-  margin-top: 2.5vh;
+  font-family: fontelabel;
+  width: 80%;
 
-  display: block;
+  height: 29vh;
+  margin-top: 2.5vh;
+  left: 11.5%;
+  display: inline-block;
   justify-content: center;
   align-items: center;
 
-  font-family: fonteLabel;
   font-size: 3.5vw;
   letter-spacing: 0.01em;
 
@@ -84,12 +98,11 @@
   cursor: pointer;
   outline: none;
 
-  background: #FFFFFF;
-  /* sombra suave */
-
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+  color: #FFFFFF;
 }
+
 #line {
+  position: relative;
   display: block;
   border-bottom: 1px solid currentColor;
   transform: matrix(1, 0, 0, 1, 0, 0);
@@ -104,6 +117,7 @@
 }
 
 #titlepresent {
+  position: relative;
   text-align: center;
   margin: auto;
   margin-top: 1%;
@@ -117,7 +131,7 @@
   font-family: fonteLabel;
   font-style: normal;
   font-weight: 600;
-  font-size: 18px;
+  font-size: 180%;
   line-height: 23px;
   letter-spacing: 0.01em;
 
@@ -129,7 +143,12 @@
 #descricaodiv {
   position: relative;
   height: 15.5vh;
+  left: 13%;
+  font-size: 5.5vw;
+  width: 80%;
 }
 #descricaodiv p {
   color: #000000;
+  font-family: fontenormal;
+  font-weight: 400;
 }
