--- a/client/src/style/css/TopBar.css
+++ b/client/src/style/css/TopBar.css
@@ -1,9 +1,14 @@
+body, html {
+  margin:0;
+  padding:0;
+}
+
 #bg {
   position: relative;
   top: 0;
-  width: 100%;
-  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
+  margin-top: 0;
   
+  width: 100%;
 }
 
 .Hamburguer {
@@ -21,7 +26,9 @@
 }
 .normalTopBarCOLOR {
   background-color: #ffffff;
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
 }
 .sidebarTopBarCOLOR {
   background-color: #fcc17a;
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
 }
