--- a/client/src/style/css/Sidebar.css
+++ b/client/src/style/css/Sidebar.css
@@ -110,7 +110,6 @@
     transition: 0.6s ease;
 }
 
-
 #primbot {
     z-index: 1;
     position: relative;
@@ -172,7 +171,6 @@
     box-sizing: border-box;
     transition: 0.6s ease;
 }
-
 /*anim*/
 #menu {
     position: absolute;
@@ -181,7 +179,10 @@
     left: 0px;
     transition: 0.6s ease;
 }
-
+#menu-hidden {
+    top:0%;
+    margin-top: 0%;
+}
 
 #botao {
     position: relative;
@@ -275,7 +276,10 @@
     transition: 0.6s;
 }
 
+
 /* para remover de todos os Links*/
 a {
+    position: relative;
     text-decoration: none;
+    margin-top: 0%;
 }
