--- a/client/src/style/css/DividasShowComponent.css
+++ b/client/src/style/css/DividasShowComponent.css
@@ -9,8 +9,9 @@
 }
 @font-face {
   font-family: fontenormal;
-  src: url(../font/SuisseIntlCond-Regular-WebS.woff);
+  src: url(../font/SuisseIntlCond-Thin-WebS.woff);
 }
+
 html {
   width: 100%;
   height: 100%;
@@ -19,6 +20,11 @@ html {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 10%;
 }
 
 .dividasshow {
@@ -77,7 +83,7 @@ html {
 
 #dividaspresent {
   position: relative;
-  font-family: fontelabel;
+  font-family: fontenormal;
   width: 80%;
 
   height: 29vh;
@@ -90,6 +96,7 @@ html {
   font-size: 3.5vw;
   letter-spacing: 0.01em;
 
+  box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.08);
   border-radius: 30px;
   border: none;
   cursor: pointer;
