--- a/client/src/style/css/TopBar.css
+++ b/client/src/style/css/TopBar.css
@@ -1,13 +1,13 @@
-body, html {
-  margin:0;
-  padding:0;
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
 
 #bg {
   position: relative;
   top: 0;
   margin-top: 0;
-  
   width: 100%;
 }
 
